@@ -475,7 +475,7 @@ define(['plugin/widget', 'plugin/service', 'state', 'util'], function (widgetCla
           };
         }
 
-        // Get Query information from from
+        // Get Query information from form
         else if (d.key == 'QueryForm') {
           let doc = document;
           let v = d["value"] = {};
@@ -503,6 +503,19 @@ define(['plugin/widget', 'plugin/service', 'state', 'util'], function (widgetCla
           v["ql"] = p.get('ql');
           v["cq"] = p.get('cq');
         }
+
+        // Get pagination information
+        else if (d.key == 'Pagination') {
+          const p = document.getElementById('pagination');
+          console.log("Not found",p);
+          if (p) {
+            const s = p.dataset;
+            let v = d["value"] = {};
+            v["page"] = s.page;
+            v["total"] = s.total;
+            v["count"] = s.count;
+          };
+        };
       };
 
       // data needs to be mirrored
